--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 rand = "0.8.4"
 image = "0.23.14"
 regex = "1.5.4"
+clap = "2.34.0"
 
 [dev-dependencies]
 uuid = { version = "0.8", features = ["serde", "v4"] }
